# stenoedit

./: Cargo.toml
src/: build.rs  load.rs  loading.rs  main.rs  modes.rs  rendering.rs
src/loading/: load_dictionary.rs
src/modes/: data.rs  insert.rs
src/rendering/: rendering.rs  setup_terminal.rs
